# hakatime

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.arm  Dockerfile.arm-deps  Makefile  README.md  cabal.project  default.nix  docker-compose-deploy.yml  docker-compose.yml  hakatime.cabal  release.nix  shell.nix
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
app/: Main.hs
dashboard/: .eslintrc.js  .gitignore  index.html  jsconfig.json  package.json  site.webmanifest
dashboard/css/: main.css
dashboard/js/: index.js
dashboard/src/: api.js  auth.js  card_container.js  config.js  index.js  single_stat_card.js  storage.js  utils.js
dashboard/src/components/: common.js  dashboard.js  leaderboards.js  login.js  overview.js  projects.js  register.js
dashboard/src/modals/: CommitList.js  CreateToken.js  ImportData.js  SetTags.js  TokenList.js
dashboard/src/models/: ProjectState.js  State.js  TimeRange.js
docker/: 001-init.sql  002-datetime-index.sql  003-create-badges.sql  004-unique-heartbeats.sql  005-change-projects-pk.sql  init.sql  start.sh
migrations/: 00001-add-tags.sql  00002-add-token-name.sql  00003-rename-empty-project.sql
nix/: hasql-queue.nix  servant-client-core.nix  servant-client.nix  servant-server.nix  servant.nix  tmp-postgres.nix  upstream.nix
sql/: delete_duplicate_heartbeats.sql  get_leaderboards.sql  get_projects_stats.sql  get_tag_stats.sql  get_time_between.sql  get_time_today.sql  get_total_project_time.sql  get_user_activity.sql  get_user_activity_by_tags.sql  insert_heartbeat.sql
src/Haka/: AesonHelpers.hs  Api.hs  App.hs  Authentication.hs  Badges.hs  Cli.hs  Database.hs  DatabaseOperations.hs  Errors.hs  Heartbeats.hs  Import.hs  Leaderboards.hs  Logger.hs  Middleware.hs  PasswordUtils.hs  Projects.hs  Stats.hs  Types.hs  Users.hs  Utils.hs
src/Haka/Db/: Sessions.hs  Statements.hs
src/Haka/Db/sql/: get_projects_stats.sql  get_timeline.sql  get_user_activity.sql  insert_heartbeat.sql
src/Haka/Handlers/: Authentication.hs  Badges.hs  Commits.hs  Heartbeats.hs  Import.hs  Leaderboards.hs  Projects.hs  Stats.hs  Users.hs
test/: Spec.hs
tools/: Main.hs
