cabal-version:       2.0
name:                hakatime
version:             0.1.0
synopsis:            Wakatime API server implementation / Dashboard UI
description:         Wakatime API server implementation / Dashboard UI
license:             PublicDomain
license-file:        UNLICENSE
author:              Konstantinos Sideris
maintainer:          siderisk@auth.gr
category:            Web, UI
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.8.3

executable hakatime
  hs-source-dirs:      app,
                       src
  main-is:             Main.hs
  other-modules:       Haka.AesonHelpers
                     , Haka.Db.Statements
                     , Haka.Db.Sessions
                     , Haka.Cli
                     , Haka.Authentication
                     , Haka.DatabaseOperations
                     , Haka.Errors
                     , Haka.Projects
                     , Haka.Heartbeats
                     , Haka.Stats
                     , Haka.Types
                     , Haka.Users
                     , Haka.Utils
                     , Paths_hakatime

  build-depends:       base
                     , aeson                == 1.4.*
                     , base64-bytestring
                     , bits
                     , bytestring
                     , case-insensitive
                     , containers
                     , contravariant-extras
                     , cookie               == 0.4.5
                     , cryptonite           == 0.26.*
                     , hasql                == 1.4.*
                     , hasql-pool           == 0.5.1
                     , hasql-transaction    == 1.0.*
                     , katip                == 0.8.*
                     , mr-env               == 0.1.*
                     , mtl                  == 2.2.2
                     , optparse-applicative == 0.15.*
                     , polysemy             == 1.3.*
                     , polysemy-plugin      == 0.2.*
                     , postgresql-binary    == 0.12.*
                     , raw-strings-qq
                     , safe-exceptions
                     , servant              == 0.17.*
                     , servant-server       == 0.17.*
                     , text
                     , time
                     , transformers
                     -- https://github.com/Soostone/katip/issues/117
                     , unliftio-core        >= 0.1 && < 0.2
                     , uuid
                     , wai                  == 3.2.*
                     , wai-cors
                     , wai-extra
                     , wai-logger           == 2.3.*
                     , warp                 == 3.3.10

  ghc-options:         -Wall
                       -O2
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wmissed-specialisations
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wmonomorphism-restriction
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
                       -fplugin=Polysemy.Plugin
                       -flate-specialise
                       -fspecialize-aggressively

  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , LambdaCase
                     , PolyKinds
                     , RankNTypes
                     , OverloadedStrings
                     , DeriveGeneric
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies

test-suite hakatime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010
