cabal-version:       2.0
name:                hakatime
version:             0.1.0
synopsis:            Wakatime API server implementation / Dashboard UI
description:         Wakatime API server implementation / Dashboard UI
license:             PublicDomain
license-file:        UNLICENSE
author:              Konstantinos Sideris
maintainer:          siderisk@auth.gr
category:            Web, UI
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.8.3

Flag dev
  Description: Build without optimizations.
  Default:     False
  Manual:      True

executable haka-data
  hs-source-dirs:      tools
  main-is:             Main.hs
  build-depends:       base
                     , aeson                == 1.4.*
                     , base64-bytestring
                     , bytestring
                     , fakedata
                     , polysemy             == 1.3.*
                     , polysemy-plugin      == 0.2.*
                     , pretty-simple
                     , http-client
                     , http-client-tls
                     , optparse-applicative == 0.15.*
                     , servant              == 0.17.*
                     , servant-client       == 0.17.*
                     , text
                     , time
                     , libhaka

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DataKinds
                     , TypeOperators

  if flag(dev)
    ghc-options:       -O0
  else
    ghc-options:       -O2

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

library libhaka
  hs-source-dirs:      src
  exposed-modules:     Haka.Api
                     , Haka.Cli
                     , Haka.Types

  other-modules:       Haka.AesonHelpers
                     , Haka.Authentication
                     , Haka.DatabaseOperations
                     , Haka.Db.Sessions
                     , Haka.Db.Statements
                     , Haka.Errors
                     , Haka.Heartbeats
                     , Haka.Projects
                     , Haka.Stats
                     , Haka.Users
                     , Haka.Utils
                     , Paths_hakatime

  build-depends:       base
                     , aeson                == 1.4.*
                     , base64-bytestring
                     , bits
                     , bytestring
                     , case-insensitive
                     , containers
                     , contravariant-extras
                     , cookie               == 0.4.5
                     , cryptonite           == 0.26.*
                     , hasql                == 1.4.*
                     , hasql-pool           == 0.5.1
                     , hasql-transaction    == 1.0.*
                     , katip                == 0.8.*
                     , mr-env               == 0.1.*
                     , mtl                  == 2.2.2
                     , optparse-applicative == 0.15.*
                     , polysemy             == 1.3.*
                     , polysemy-plugin      == 0.2.*
                     , postgresql-binary    == 0.12.*
                     , raw-strings-qq
                     , safe-exceptions
                     , servant              == 0.17.*
                     , servant-server       == 0.17.*
                     , text
                     , time
                     , transformers
                     -- https://github.com/Soostone/katip/issues/117
                     , unliftio-core        >= 0.1 && < 0.2
                     , uuid

  if flag(dev)
    ghc-options:       -O0
  else
    ghc-options:       -O2

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wmissed-specialisations
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wmonomorphism-restriction
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
                       -fplugin=Polysemy.Plugin
                       -flate-specialise
                       -fspecialize-aggressively

  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , LambdaCase
                     , PolyKinds
                     , RankNTypes
                     , OverloadedStrings
                     , DeriveGeneric
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies


executable hakatime
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base
                     , bytestring
                     , hasql-pool           == 0.5.1
                     , katip                == 0.8.*
                     , libhaka
                     , mr-env               == 0.1.*
                     , mtl                  == 2.2.2
                     , optparse-applicative == 0.15.*
                     , polysemy             == 1.3.*
                     , polysemy-plugin      == 0.2.*
                     , servant-server       == 0.17.*
                     , transformers
                     , wai                  == 3.2.*
                     , wai-cors
                     , wai-extra
                     , wai-logger           == 2.3.*
                     , warp                 == 3.3.10

  if flag(dev)
    ghc-options:       -O0
  else
    ghc-options:       -O2

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeOperators

test-suite hakatime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010
