cabal-version:       3.0
name:                hakatime
version:             1.3.0
synopsis:            Wakatime API server implementation / Dashboard UI
description:         Wakatime compatible server with an analytics dashboard.
license:             Unlicense
license-file:        UNLICENSE
author:              Konstantinos Sideris
maintainer:          siderisk@auth.gr
category:            Web, UI
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.8.3

source-repository head
  type:     git
  location: https://github.com/mujx/hakatime

executable haka-data
  hs-source-dirs:      tools
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  main-is:             Main.hs
  build-depends:       base                 >= 4.9 && < 4.15
                     , aeson                >= 1.4
                     , base64-bytestring
                     , fakedata
                     , http-client
                     , http-client-tls
                     , random
                     , optparse-applicative >= 0.15
                     , servant              >= 0.17
                     , servant-client       >= 0.17
                     , time
                     , hakatime
                     , relude               >= 0.6.0.0

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DataKinds
                     , TypeOperators

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  hs-source-dirs:      src
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude, Relude.Unsafe)
  exposed-modules:     Haka.Api
                     , Haka.Cli
                     , Haka.App
                     , Haka.Middleware
                     , Haka.Errors
                     , Haka.Handlers.Import
                     , Haka.Types
                     , Haka.Logger

  other-modules:       Haka.AesonHelpers
                     , Haka.Handlers.Authentication
                     , Haka.Handlers.Badges
                     , Haka.Database
                     , Haka.Db.Sessions
                     , Haka.Db.Statements
                     , Haka.Handlers.Heartbeats
                     , Haka.Handlers.Projects
                     , Haka.Handlers.Stats
                     , Haka.Handlers.Leaderboards
                     , Haka.Handlers.Users
                     , Haka.Handlers.Commits
                     , Haka.Utils
                     , Haka.PasswordUtils
                     , Paths_hakatime

  autogen-modules:     Paths_hakatime

  build-depends:       base                 >= 4.9 && < 4.15
                     , aeson                >= 1.4
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , containers
                     , contravariant-extras
                     , cookie               == 0.4.5
                     , cryptonite           >= 0.26
                     , file-embed
                     , hasql                == 1.4.*
                     , hasql-pool           == 0.5.*
                     , hasql-queue          == 1.2.*
                     , hasql-transaction    == 1.0.*
                     , http-media
                     , http-client
                     , http-client-tls
                     , uuid-types
                     , katip                == 0.8.*
                     , mr-env               == 0.1.*
                     , req
                     , unix
                     , optparse-applicative >= 0.15
                     , postgresql-binary    == 0.12.*
                     , raw-strings-qq
                     , safe-exceptions
                     , servant              >= 0.17
                     , servant-server       >= 0.17
                     , system-filepath
                     , text
                     , time
                     , uuid
                     , wai                  == 3.2.*
                     , wai-extra
                     , http-types
                     , relude               >= 0.6.0.0
                     , postgresql-simple
                     , postgresql-simple-migration
                     , vector

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wmissed-specialisations
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wmonomorphism-restriction
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , LambdaCase
                     , PolyKinds
                     , RankNTypes
                     , OverloadedStrings
                     , DeriveGeneric
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies


executable hakatime
  hs-source-dirs:      app
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  main-is:             Main.hs

  build-depends:       base                 >= 4.9 && < 4.15
                     , hasql                == 1.4.*
                     , hasql-pool           == 0.5.*
                     , hasql-queue          == 1.2.*
                     , katip                == 0.8.*
                     , hakatime
                     , mr-env               == 0.1.*
                     , unix
                     , safe-exceptions
                     , optparse-applicative >= 0.15
                     , servant-server       >= 0.17
                     , wai                  == 3.2.*
                     , wai-cors
                     , wai-extra
                     , wai-logger           == 2.3.*
                     , warp                 == 3.3.*
                     , relude               >= 0.6.0.0

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , TypeOperators

test-suite hakatime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010
